--- a/01_js_janken_yanaga_hiroyuki_F03/janken.html
+++ b/01_js_janken_yanaga_hiroyuki_F03/janken.html
@@ -36,7 +36,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script>
     //button グー＝０、チョキ＝１、パー＝２と定義する
-    //gu button をクリックすると乱数を生成する
+    //gu button をクリックすると乱数を生成する０００
     const gu = '<img src="./images/gu.jpeg" alt="">';
     const cho = '<img src="./images/cho.jpg" style="width: 100px;" alt="">';
     const pa = '<img src="./images/pa.jpg" style="width: 100px;" alt="">';
